unpackaged/objects/BLND_DFDT_Linker__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Destination_Link__c</fullName>
		<label>Destination Link</label>
		<length>40</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>BLND_Purpose__c</fullName>
		<label>Purpose</label>
		<length>80</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>BLND_Source_Link__c</fullName>
		<label>Source Link</label>
		<length>40</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>BLND_Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>DreamTeam Linker</label>
	<nameField>
		<label>Linker Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Linkers</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>